--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,8 @@
 name: .NET Core
+env:
+  AZURE_WEBAPP_NAME: service-reserva   # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  DOTNET_VERSION: '5' 
 on:
 
   push:
@@ -36,15 +40,19 @@ jobs:
             docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/reserva:latest
             docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/reserva:latest
 
-#         - name: 'Deploy to Azure Container Instances'
-#           uses: 'azure/aci-deploy@v1'
-#           with:
-#             resource-group: ${{ secrets.RESOURCE_GROUP }}
-#             dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-#             image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/reserva:latest
-#             registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-#             registry-username: ${{ secrets.REGISTRY_USERNAME }}
-#             registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-#             name: aci-reserva-new
-#             location: 'west us 3'
+        - name: 'Push container image to ACR'
+          uses: azure/docker-login@v1
+          with:
+            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+            username: ${{ secrets.REGISTRY_USERNAME }}
+            password: ${{ secrets.REGISTRY_PASSWORD }}
+        - run: docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/reserva:latest
+        
+        - name: Deploy to Azure Web App
+          id: deploy-to-webapp
+          uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+          with:
+            app-name: ${{ env.AZURE_WEBAPP_NAME }}
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+            package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
             
