--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 name: .NET Core
 env:
-  AZURE_WEBAPP_NAME: service-reserva   # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_NAME: service-reserva
+  AZURE_WEBAPP_PACKAGE_PATH: '.' 
   DOTNET_VERSION: '5' 
 on:
 
