--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,28 +18,34 @@ jobs:
           uses: actions/setup-java@v1
           with:
             java-version: 1.11
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v3
+        - name: Setup .NET
+          uses: actions/setup-dotnet@v2
           with:
-            fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-        - name: Cache SonarCloud packages
+            dotnet-version: 5.0.x
+        - name: Restore dependencies
+          run: dotnet restore
+        - name: Cache SonarQube packages
           uses: actions/cache@v1
           with:
             path: ~\sonar\cache
             key: ${{ runner.os }}-sonar
             restore-keys: ${{ runner.os }}-sonar
-        - name: Cache SonarCloud scanner
+        - name: Cache SonarQube scanner
           id: cache-sonar-scanner
           uses: actions/cache@v1
           with:
             path: .\.sonar\scanner
             key: ${{ runner.os }}-sonar-scanner
             restore-keys: ${{ runner.os }}-sonar-scanner
-        - name: Install SonarCloud scanner
+        - name: Install SonarQube scanner
           if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
           shell: powershell
           run: |
             New-Item -Path .\.sonar\scanner -ItemType Directory
             dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+        - name: Install dotnet code coverage tool
+          run: dotnet tool install --global dotnet-coverage
         - name: Build and analyze
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
