--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: .NET Core
+name: Build, Test, Analyze
 
 on:
-  push:
-    branches: [ "dev" ]
   pull_request:
-    branches: [ "dev" ]
+    types: [opened, reopened]
+    branches:    
+      - 'dev'
 jobs:
     build:
       name: Build
